#10 Contrast fix live section

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -528,4 +528,10 @@ main.gebruikers {
       font-weight: 700;
       border-bottom: 3px solid black;
     }
+
+  }
+
+  .live-section {
+    background: var(--background-dark);
+  }
 }
